--- a/MyNetflix/MyNetflix/Player.storyboard
+++ b/MyNetflix/MyNetflix/Player.storyboard
@@ -16,25 +16,81 @@
                         <rect key="frame" x="0.0" y="0.0" width="812" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T0Q-4y-bTn">
-                                <rect key="frame" x="706" y="42" width="39" height="30"/>
-                                <state key="normal" title="Close"/>
-                                <connections>
-                                    <action selector="closeButtonTapped:" destination="mbs-Ed-6wm" eventType="touchUpInside" id="CXF-dh-dQv"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pZy-gN-Te9" customClass="PlayerView" customModule="MyNetflix" customModuleProvider="target">
+                                <rect key="frame" x="44" y="0.0" width="724" height="375"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oPc-Gx-kLe">
+                                <rect key="frame" x="44" y="0.0" width="724" height="375"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSd-Gf-Efs">
+                                        <rect key="frame" x="342" y="167.66666666666666" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="9MZ-yq-Tsa"/>
+                                            <constraint firstAttribute="width" constant="40" id="EOa-WJ-afz"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="play.fill" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="30"/>
+                                        </state>
+                                        <state key="selected" image="pause.fill" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="30"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="togglePlaybutton:" destination="mbs-Ed-6wm" eventType="touchUpInside" id="DB8-bs-60L"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WQw-WV-0eo">
+                                        <rect key="frame" x="664" y="16" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="Fcx-tI-8kq"/>
+                                            <constraint firstAttribute="height" constant="40" id="hZY-OU-Eb3"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="xmark" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="25"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="closeButtonTapped:" destination="mbs-Ed-6wm" eventType="touchUpInside" id="6bo-KQ-LrH"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="fSd-Gf-Efs" firstAttribute="centerY" secondItem="oPc-Gx-kLe" secondAttribute="centerY" id="4Ts-bO-TpQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="WQw-WV-0eo" secondAttribute="trailing" constant="20" id="o7m-eM-Isi"/>
+                                    <constraint firstItem="fSd-Gf-Efs" firstAttribute="centerX" secondItem="oPc-Gx-kLe" secondAttribute="centerX" id="o9U-KD-iBH"/>
+                                    <constraint firstItem="WQw-WV-0eo" firstAttribute="top" secondItem="oPc-Gx-kLe" secondAttribute="top" constant="16" id="r7j-xu-NeC"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Du5-Th-wYi"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Du5-Th-wYi" firstAttribute="trailing" secondItem="T0Q-4y-bTn" secondAttribute="trailing" constant="23" id="Jvq-dL-LJV"/>
-                            <constraint firstItem="T0Q-4y-bTn" firstAttribute="top" secondItem="Du5-Th-wYi" secondAttribute="top" constant="42" id="vID-mj-x4M"/>
+                            <constraint firstItem="oPc-Gx-kLe" firstAttribute="width" secondItem="pZy-gN-Te9" secondAttribute="width" id="6fy-tH-Pus"/>
+                            <constraint firstItem="oPc-Gx-kLe" firstAttribute="leading" secondItem="pZy-gN-Te9" secondAttribute="leading" id="8Bn-fp-0Kb"/>
+                            <constraint firstItem="oPc-Gx-kLe" firstAttribute="height" secondItem="pZy-gN-Te9" secondAttribute="height" id="IrZ-OM-MQd"/>
+                            <constraint firstItem="Du5-Th-wYi" firstAttribute="leading" secondItem="pZy-gN-Te9" secondAttribute="leading" id="Lbo-Dd-6j8"/>
+                            <constraint firstItem="oPc-Gx-kLe" firstAttribute="top" secondItem="pZy-gN-Te9" secondAttribute="top" id="ZkW-s3-lyv"/>
+                            <constraint firstItem="pZy-gN-Te9" firstAttribute="top" secondItem="Dq2-Lt-FjU" secondAttribute="top" id="qiN-aA-WaY"/>
+                            <constraint firstItem="pZy-gN-Te9" firstAttribute="bottom" secondItem="Dq2-Lt-FjU" secondAttribute="bottom" id="xq0-Xo-XfC"/>
+                            <constraint firstItem="pZy-gN-Te9" firstAttribute="trailing" secondItem="Du5-Th-wYi" secondAttribute="trailing" id="y8F-Gp-wJ0"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="PlayerView" destination="pZy-gN-Te9" id="cDK-kd-RJ1"/>
+                        <outlet property="controlView" destination="oPc-Gx-kLe" id="Zvg-d4-RtL"/>
+                        <outlet property="playButton" destination="fSd-Gf-Efs" id="dIl-c1-O5b"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Du-VI-KnT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1.4778325123152709" y="2.3999999999999999"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="pause.fill" catalog="system" width="116" height="128"/>
+        <image name="play.fill" catalog="system" width="116" height="128"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
+    </resources>
 </document>
